# pay-plugin-example

./: .clang-format  .clang-format-ignore  .clang-tidy  CLAUDE.md  TECH_SPECS.md
.agents/skills/drogon-build/: SKILL.md
.agents/skills/production-readiness-docs/: SKILL.md
.agents/skills/production-readiness-docs/evals/: evals.json
.codex/agents/: payment-test-reviewer.toml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  deploy.yml
.kiro/specs/production-readiness-upgrade/: .config.kiro  requirements.md
PayBackend/: .env.development.example  .env.example  .env.production.example  .gitignore  CMakeLists.txt  Dockerfile  config.json  docker-compose.yml  main.cc  model.json
PayBackend/controllers/: AlipayCallbackController.cc  AlipayCallbackController.h  HealthCheckController.cc  HealthCheckController.h  MetricsController.cc  MetricsController.h  PayController.cc  PayController.h  PayMetricsController.cc  PayMetricsController.h  WechatCallbackController.cc  WechatCallbackController.h
PayBackend/docs/superpowers/plans/: 2026-04-13-option-b-implementation.md
PayBackend/filters/: PayAuthFilter.cc  PayAuthFilter.h  PayAuthMetrics.cc
PayBackend/models/: PayCallback.cc  PayCallback.h  PayIdempotency.cc  PayLedger.cc  PayOrder.cc  PayPayment.cc  PayPayment.h  PayRefund.cc  PayRefund.h  orm_compat.h
PayBackend/plugins/: AlipaySandboxClient.cc  AlipaySandboxClient.h  PayPlugin.cc  PayPlugin.h  WechatPayClient.cc  WechatPayClient.h
PayBackend/scripts/: build.bat  check_config.bat  check_config.sh  full_test.bat  generate_models.bat  run_server.bat  setup_database.bat  test.bat
PayBackend/services/: CallbackService.cc  CallbackService.h  IdempotencyService.cc  IdempotencyService.h  PayErrorCategory.h  PaymentService.cc  PaymentService.h  ReconciliationService.cc  ReconciliationService.h  RefundService.cc  RefundService.h
PayBackend/sql/: 001_init_pay_tables.sql
PayBackend/test/: CMakeLists.txt  ConfigLoaderTest.cc  ControllerMetricsTest.cc  CreatePaymentIntegrationTest.cc  HealthProbeTest.cc  IdempotencyIntegrationTest.cc  OnceCallbackTest.cc  PayAuthFilterTest.cc  PayAuthMetricsTest.cc  QueryOrderTest.cc  ReconcileSummaryTest.cc  RefundQueryTest.cc  StartupValidatorTest.cc  TestConfigHelper.h  WechatCallbackIntegrationTest.cc  WechatPayClientTest.cc  run_all_tests.ps1  test_main.cc
PayBackend/utils/: ConfigLoader.cc  ConfigLoader.h  OnceCallback.h  PayUtils.cc  PayUtils.h  StartupValidator.cc  StartupValidator.h
PayFrontend/: package-lock.json
PayFrontend/src/api/: payment.js
PayFrontend/src/stores/: order.js
PayFrontend/src/views/: StepView.vue
docs/superpowers/plans/: 2026-05-28-m1-production-readiness.md
docs/superpowers/specs/: 2026-05-28-m1-production-readiness-design.md
scripts/: emoji_manager.py
